--- a/product-manager.html
+++ b/product-manager.html
@@ -41,7 +41,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://jobs.lever.co/geckoboard/5d91d4f0-ccd8-4c83-9b79-dc13ff88c468?lever-via=DB6OM-w0UX'>Geckoboard - Product Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/hcss/jobs/1941595'>Job Application for Senior Growth Product Manager - Sales/Marketing at HCSS</a></h5> 
@@ -52,7 +52,7 @@
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/kjssi3eih7jhcc9fppb4zacapa'>Product Manager | Opportunity Portal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/thetalentsourceinc/job/kjssi3eih7jhcc9fppb4zacapa'>Product Manager | Opportunity Portal</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -104,7 +104,7 @@
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TRICENTIS/743999698474016-product-owner-sap'>TRICENTIS Product Owner SAP | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TRICENTIS/743999698474016-product-owner-sap'>TRICENTIS Product Owner SAP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -128,7 +128,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/discord/jobs/4002985002'>Job Application for Product Manager, Internal Products at Discord</a></h5> 
+<h5><a href='https://boards.greenhouse.io/discord/jobs/4002985002'>Job Application for Product Manager, Internal Products at Discord</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -162,7 +162,7 @@
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://sidecar.applytojob.com/apply/DqDwAhre0l/Product-Manager-I'>Product Manager I - Sidecar - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://sidecar.applytojob.com/apply/DqDwAhre0l/Product-Manager-I'>Product Manager I - Sidecar - Career Page</a></h5> 
 <p><span class="badge badge-light">Philadelphia, PA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -204,7 +204,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ayla-networks/job/onAsbfwk'>Ayla Networks Careers - Senior Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ayla-networks/job/onAsbfwk'>Ayla Networks Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -212,7 +212,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://producthire.net/job/sr-product-manager-big-data-platform/'>Sr. Product Manager, Big Data Platform | PRODUCTHIRE.NET</a></h5> 
+<h5><a href='https://producthire.net/job/sr-product-manager-big-data-platform/'>Sr. Product Manager, Big Data Platform | PRODUCTHIRE.NET</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -228,7 +228,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
+<h5><a href='https://jobs.lever.co/americaatwork/2bb511c7-d0f7-4ad4-99a8-ee4f443c83d4'>America At Work - Product Manager (copy)</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -328,7 +328,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.capitalonecareers.com/job/vienna/product-manager-conversational-ai-platform/1732/13100355'>Product Manager, Conversational AI Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.capitalonecareers.com/job/vienna/product-manager-conversational-ai-platform/1732/13100355'>Product Manager, Conversational AI Platform</a></h5> 
 <p><span class="badge badge-light">Canada  New York, New York Vienna</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -336,7 +336,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999698584056-product-owner-m-w-d-team-checkout-und-digital-payments'>E. Breuninger GmbH & Co. Product Owner (m/w/d) Team Checkout und Digital Payments | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/EBreuningerGmbHCo/743999698584056-product-owner-m-w-d-team-checkout-und-digital-payments'>E. Breuninger GmbH & Co. Product Owner (m/w/d) Team Checkout und Digital Payments | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -414,11 +414,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999698557397-product-designer'>JobTeaser Product Designer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999698557397-product-designer'>JobTeaser Product Designer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dept/jobs/1935253'>Job Application for Senior Product Owner - Technology (m/w/div) at Dept</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dept/jobs/1935253'>Job Application for Senior Product Owner - Technology (m/w/div) at Dept</a></h5> 
 <p><span class="badge badge-light">Hamburg  Hamburg</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -426,7 +426,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://live.solique.ch/sonova/en/internet/jobs/Product-Manager--2316400/'>Sonova: Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://live.solique.ch/sonova/en/internet/jobs/Product-Manager--2316400/'>Sonova: Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
